--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,26 @@
   "name": "Kibo - AI Desktop Friend",
   "short_name": "Kibo",
   "description": "A personal AI companion for your desktop.",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#1e293b",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='192' height='192' viewBox='0 0 192 192' fill='none'><rect width='192' height='192' rx='36' fill='%231e293b'/><circle cx='96' cy='96' r='54' fill='%2364748b'/><circle cx='96' cy='96' r='20' fill='%23e2e8f0'/></svg>",
-      "type": "image/svg+xml",
+      "src": "/icon.svg",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "type": "image/svg+xml"
     },
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 192 192' fill='none'><rect width='192' height='192' rx='36' fill='%231e293b'/><circle cx='96' cy='96' r='54' fill='%2364748b'/><circle cx='96' cy='96' r='20' fill='%23e2e8f0'/></svg>",
-      "type": "image/svg+xml",
+      "src": "/icon.svg",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/icon.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ]
 }
